--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta property="og:title" content="Wedding by Alpian TABRANI">
+    <meta property="og:title" content="The wedding of Riki and Sahinun">
     <meta property="og:description"
         content="Dengan penuh rasa syukur dan cinta, kami mengundang Anda untuk hadir dalam hari istimewa kami. Sebuah kisah dua hati yang disatukan dalam ikatan suci pernikahan.">
-    <meta property="og:image" content="https://weddingbyalpian.netlify.app/asset/img/portfolio/portfolio-8-Copy.jpg">
-    <meta property="og:url" content="https://weddingbyalpian.netlify.app/">
+    <meta property="og:image"
+        content="https://the-wedding-of-riki-and-sahinun.vercel.app/asset/img/portfolio/portfolio-8-Copy.jpg">
+    <meta property="og:url" content="https://the-wedding-of-riki-and-sahinun.vercel.app/">
     <title>RIKI ❤ SAHINUN</title>
     <link rel="icon" href="./asset/icon/wedding-ring.png" type="image/x-icon">
     <!-- AnimatedOnScroll -->
