--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
     <!-- HERO -->
     <section id="hero">
         <div class="relative w-full h-screen flex flex-col justify-center items-center bg-center bg-no-repeat bg-cover bg-gray-500 bg-blend-multiply"
-            style="background-image: url('./asset/img/portfolio/hero.jpg');">
+            style="background-image: url('./asset/img/portfolio/hero.JPG');">
 
             <img src="./asset/img/dekoratif/kanan-atas.png"
                 class="absolute top-0 left-0 w-24 z-0 pointer-events-none overflow-hidden" data-aos="fade-down">
@@ -367,7 +367,7 @@
 
         <img src="./asset/img/dekoratif/pngwing.com (21).png"
             class="absolute bottom-0 w-full z-0 pointer-events-none overflow-hidden" data-aos="fade-up">
-        <img src="./asset/img/dekoratif/pngwing.com (21)2.png"
+        <img src="./asset/img/dekoratif/pngwing.com (21)2.PNG"
             class="absolute top-0 w-full z-0 pointer-events-none overflow-hidden" data-aos="fade-down">
 
         <div class="container mx-auto px-4">
@@ -656,7 +656,7 @@
     <!-- Gallery Section -->
     <section id="gallery" class="py-12 relative bg-gray-100">
 
-        <img src="./asset/img/dekoratif/pngwing.com (21)2.png"
+        <img src="./asset/img/dekoratif/pngwing.com (21)2.PNG"
             class="absolute top-0 w-full z-0 pointer-events-none overflow-hidden" data-aos="fade-down">
 
         <div class="container mx-auto px-4">
