--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <img src="./asset/img/dekoratif/pngwing.com (21)2.PNG"
                 class="absolute top-0 w-full opacity-30 z-0 pointer-events-none overflow-hidden">
-            <img src="./asset/img/dekoratif/pngwing.com (21).PNG"
+            <img src="./asset/img/dekoratif/pngwing.com (21).png"
                 class="absolute bottom-0 w-full opacity-30 z-0 pointer-events-none overflow-hidden">
 
             <!-- Konten utama -->
@@ -191,7 +191,7 @@
     <!-- Story -->
     <section id="story" class="min-h-screen relative py-20 bg-rose-100 overflow-hidden">
 
-        <img src="./asset/img/dekoratif/pngwing.com (21)2.png"
+        <img src="./asset/img/dekoratif/pngwing.com (21)2.PNG"
             class="absolute top-0 w-full z-0 pointer-events-none overflow-hidden" data-aos="fade-down">
         <img src="./asset/img/dekoratif/pngwing.com (21).png"
             class="absolute bottom-0 w-full z-0 pointer-events-none overflow-hidden" data-aos="fade-up">
@@ -384,8 +384,8 @@
                 <!-- Container untuk kedua acara -->
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-8 mb-12">
                     <!-- Akad Nikah -->
-                    <div
-                        class="relative bg-gradient-to-br from-white to-pink-50 rounded-2xl shadow-xl p-8 text-center border-2 border-pink-300 hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 max-w-md mx-auto overflow-hidden">
+                    <div class="relative bg-gradient-to-br from-white to-pink-50 rounded-2xl shadow-xl p-8 text-center border-2 border-pink-300 hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 max-w-md mx-auto overflow-hidden"
+                        data-aos="fade-left">
                         <!-- Decorative elements -->
                         <div class="absolute top-0 right-0 w-32 h-32 -mr-16 -mt-16 bg-pink-100 rounded-full opacity-50">
                         </div>
@@ -478,10 +478,11 @@
                     </div>
 
                     <!-- Card Resepsi -->
-                    <div
-                        class="relative bg-gradient-to-br from-white to-pink-50 rounded-2xl shadow-xl p-8 text-center border-2 border-pink-300 hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 max-w-md mx-auto overflow-hidden">
+                    <div class="relative bg-gradient-to-br from-white to-pink-50 rounded-2xl shadow-xl p-8 text-center border-2 border-pink-300 hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 max-w-md mx-auto overflow-hidden"
+                        data-aos="fade-right">
                         <!-- Decorative elements -->
-                        <div class="absolute top-0 right-0 w-32 h-32 -mr-16 -mt-16 bg-pink-100 rounded-full opacity-50">
+                        <div class=" absolute top-0 right-0 w-32 h-32 -mr-16 -mt-16 bg-pink-100 rounded-full
+                        opacity-50">
                         </div>
                         <div
                             class="absolute bottom-0 left-0 w-40 h-40 -ml-20 -mb-20 bg-pink-100 rounded-full opacity-50">
