--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <audio id="wedding-music" src="./asset/musik/musik_wedding.mp3" loop></audio>
     <!-- buka undangan -->
     <section id="buka-undangan">
-        <div class="relative w-full min-h-dvh flex justify-center items-center bg-cover bg-no-repeat bg-center bg-gray-500 bg-blend-multiply"
+        <div class="relative w-full h-screen flex justify-center items-center bg-cover bg-no-repeat bg-center bg-gray-500 bg-blend-multiply"
             style="background-image: url('./asset/img/services-2.jpg');">
 
             <img src="./asset/img/dekoratif/pngwing.com (21)2.PNG"
@@ -78,7 +78,7 @@
     </section>
     <!-- HERO -->
     <section id="hero">
-        <div class="relative w-full min-h-dvh flex flex-col justify-center items-center bg-center bg-no-repeat bg-cover bg-gray-500 bg-blend-multiply"
+        <div class="relative w-full h-screen flex flex-col justify-center items-center bg-center bg-no-repeat bg-cover bg-gray-500 bg-blend-multiply"
             style="background-image: url('./asset/img/portfolio/hero.JPG');">
 
             <img src="./asset/img/dekoratif/kanan-atas.png"
