--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                     Riki & Sahinun
                 </h1>
 
-                <div class="relative w-[280px] h-[280px] flex items-center justify-center overflow-hidden">
+                <div class="relative w-[300px] h-[300px] flex items-center justify-center overflow-hidden">
                     <!-- Gambar Dekoratif -->
                     <img src="./asset/img/dekoratif/pngwing.com (25).png" alt="dekoratif"
                         class="absolute w-full h-full animate-spin-slow z-0">
 
                     <img src="./asset/img/portfolio/depan_undangan_bulat.jpg" alt="open"
-                        class="w-[230px] h-[230px] object-cover rounded-full z-10 shadow-2xl shadow-gray-500/50">
+                        class="w-[250px] h-[250px] object-cover rounded-full z-10 shadow-2xl shadow-gray-500/50">
                 </div>
                 <span class="text-white text-sm mb-1">Kepada YTH:</span>
                 <span id="nama_tamu" class="text-white text-sm text-center mb-6"></span>
@@ -142,7 +142,7 @@
                     kekuasaan-Nya adalah Dia menciptakan pasangan hidup dari golonganmu sendiri, agar kamu merasa tenang
                     bersamanya"</p>
 
-                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=The+Wedding+of+Alpian+%26+Tabrani&dates=20250404T100000Z/20250404T120000Z&details=Jangan+lupa+datang+ke+pernikahan+Alpian+%26+Tabrani!&location=Selong,+Indonesia"
+                <a href="https://www.google.com/calendar/render?action=TEMPLATE&text=The+Wedding+of+Moh.+Riki+%26+Sahinun&dates=20250503T080000Z/20250503T100000Z&details=Hari%2Ftgl+Akad+Nikah%3A+Sabtu%2C+03+Mei+2025+Mulai+dari+jam+16%3A00+WITA-selesai&location=Rumah+Bpk.+Sahir+-+Ibu+Seruni%2C+Repok+Muhajirin%2C+Pepao+Timur%2C+Desa+Lekor%2C+Kecamatan+Janapria"
                     target="_blank">
                     <button
                         class="bg-rose-600 hover:bg-rose-700 text-white font-semibold py-3 px-8 rounded-full shadow-md transition-all duration-300 hover:shadow-lg animate-bounce">
