--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
                     Riki & Sahinun
                 </h1>
 
-                <div class="relative w-[280px] h-[280px] flex items-center justify-center overflow-hidden">
+                <div class="relative w-[300px] h-[300px] flex items-center justify-center overflow-hidden">
                     <!-- Gambar Dekoratif -->
                     <img src="./asset/img/dekoratif/pngwing.com (25).png" alt="dekoratif"
                         class="absolute w-full h-full animate-spin-slow z-0">
 
                     <img src="./asset/img/portfolio/depan_undangan_bulat.jpg" alt="open"
-                        class="w-[230px] h-[230px] object-cover rounded-full z-10 shadow-2xl shadow-gray-500/50">
+                        class="w-[250px] h-[250px] object-cover rounded-full z-10 shadow-2xl shadow-gray-500/50">
                 </div>
                 <span class="text-white text-sm mb-1">Kepada YTH:</span>
                 <span id="nama_tamu" class="text-white text-sm text-center mb-6"></span>
@@ -177,7 +177,7 @@
             <div class="container mx-auto px-4 mt-8" data-aos="fade-up">
                 <div class="flex flex-col md:flex-row justify-center items-center gap-6 md:gap-10">
                     <!-- Bride Photo -->
-                    <div class="w-full md:w-1/3 max-w-xs" data-aos="fade-right">
+                    <div class="w-full md:w-1/3 max-w-xs text-center" data-aos="fade-right">
                         <div class="bg-white p-4 rounded-xl shadow-lg border border-pink-200 overflow-hidden">
                             <img src="./asset/img/portfolio/pria2.png" alt="Bride"
                                 class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105">
@@ -203,7 +203,7 @@
                     </div>
 
                     <!-- Groom Photo -->
-                    <div class="w-full md:w-1/3 max-w-xs" data-aos="fade-left">
+                    <div class="w-full md:w-1/3 max-w-xs text-center" data-aos="fade-left">
                         <div class="bg-white p-4 rounded-xl shadow-lg border border-pink-200 overflow-hidden">
                             <img src="./asset/img/portfolio/wanita2.png" alt="Groom"
                                 class="w-full h-auto rounded-lg object-cover transition-transform duration-300 hover:scale-105">
@@ -502,73 +502,7 @@
             </div>
         </div>
     </section>
-    <!-- Gallery Section -->
-    <section id="gallery" class="py-12 relative bg-gray-100">
 
-        <img src="./asset/img/dekoratif/pngwing.com (21)2.PNG"
-            class="absolute top-0 w-full z-0 pointer-events-none overflow-hidden" data-aos="fade-down">
-
-        <div class="container mx-auto px-4">
-            <h2 class="text-center text-5xl font-bold text-gray-800 mb-8" data-aos="fade-up">Gallery</h2>
-            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-4">
-                <!-- Portfolio Items -->
-                <div>
-                    <a href="./asset/img/portfolio/portfolio-1.jpg" data-lightbox="roadtrip">
-                        <img class="w-full h-64 object-cover rounded-lg" data-aos="fade-up"
-                            src="./asset/img/portfolio/portfolio-1.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="./asset/img/portfolio/portfolio-2.jpg" data-lightbox="roadtrip">
-                        <img class="w-full h-64 object-cover rounded-lg" data-aos="fade-up"
-                            src="./asset/img/portfolio/portfolio-2.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="./asset/img/portfolio/portfolio-3.jpg" data-lightbox="roadtrip">
-                        <img class="w-full h-64 object-cover rounded-lg" data-aos="fade-up"
-                            src="./asset/img/portfolio/portfolio-3.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="./asset/img/portfolio/portfolio-4.jpg" data-lightbox="roadtrip">
-                        <img class="w-full h-64 object-cover rounded-lg" data-aos="fade-up"
-                            src="./asset/img/portfolio/portfolio-4.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="./asset/img/portfolio/portfolio-5.jpg" data-lightbox="roadtrip">
-                        <img class="w-full h-64 object-cover rounded-lg" data-aos="fade-up"
-                            src="./asset/img/portfolio/portfolio-5.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="./asset/img/portfolio/portfolio-6.jpg" data-lightbox="roadtrip">
-                        <img class="w-full h-64 object-cover rounded-lg" data-aos="fade-up"
-                            src="./asset/img/portfolio/portfolio-6.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="./asset/img/portfolio/portfolio-7.jpg" data-lightbox="roadtrip">
-                        <img class="w-full h-64 object-cover rounded-lg" data-aos="fade-up"
-                            src="./asset/img/portfolio/portfolio-7.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="./asset/img/portfolio/portfolio-8.jpg" data-lightbox="roadtrip">
-                        <img class="w-full h-64 object-cover rounded-lg" data-aos="fade-up"
-                            src="./asset/img/portfolio/portfolio-8.jpg" alt="">
-                    </a>
-                </div>
-                <div>
-                    <a href="./asset/img/portfolio/portfolio-9.jpg" data-lightbox="roadtrip">
-                        <img class="w-full h-64 object-cover rounded-lg" data-aos="fade-up"
-                            src="./asset/img/portfolio/portfolio-9.jpg" alt="">
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section>
     <!-- Hadiah -->
     <section id="hadiah" class="py-20 relative bg-white overflow-hidden">
 
@@ -607,27 +541,15 @@
                         <p class="text-gray-600 mb-6">Anda bisa mengirimkan hadiah melalui transfer bank</p>
 
                         <div class="border-b border-gray-200 pb-4 mb-4">
-                            <p class="font-medium text-gray-800">Bank BCA</p>
+                            <p class="font-medium text-gray-800">Bank BRI</p>
                             <div class="flex items-center justify-between bg-gray-100 p-2 rounded-lg">
-                                <p id="no-rek-bca" class="text-gray-700 font-medium">89586847464</p>
+                                <p id="no-rek-bca" class="text-gray-700 font-medium">795001016047539</p>
                                 <button onclick="copyToClipboard('no-rek-bca')" class="bg-gradient-to-r from-blue-500 to-blue-700 text-white font-semibold px-4 py-1.5 rounded-lg shadow-md 
                                            transition transform hover:scale-105 active:scale-95">
                                     Copy
                                 </button>
                             </div>
-                            <p class="text-gray-600 mt-1">a.n. Nama Pengantin Pria</p>
-                        </div>
-
-                        <div>
-                            <p class="font-medium text-gray-800">Bank Mandiri</p>
-                            <div class="flex items-center justify-between bg-gray-100 p-2 rounded-lg">
-                                <p id="no-rek-mandiri" class="text-gray-700 font-medium">7834726783268</p>
-                                <button onclick="copyToClipboard('no-rek-mandiri')" class="bg-gradient-to-r from-blue-500 to-blue-700 text-white font-semibold px-4 py-1.5 rounded-lg shadow-md 
-                                           transition transform hover:scale-105 active:scale-95">
-                                    Copy
-                                </button>
-                            </div>
-                            <p class="text-gray-600 mt-1">a.n. Nama Pengantin Wanita</p>
+                            <p class="text-gray-600 mt-1">a.n. SAHINUN</p>
                         </div>
 
                         <script>
@@ -733,7 +655,7 @@
                 <div class="flex flex-col md:flex-row">
                     <!-- Decorative image side -->
                     <div class="md:w-1/3 bg-cover bg-center hidden md:block"
-                        style="background-image: url('./asset/img/portfolio/portfolio-1.jpg');">
+                        style="background-image: url('./asset/img/portfolio/turut_undang_img.jpg');">
                     </div>
                     <!-- https://script.google.com/macros/s/AKfycbxBX5MVvgon-OSrmot-WYt7tiSrnsguXwe8cPZECGT-5xOyftYQQ_C7vqOdEy5G19rN/exec -->
                     <!-- Form side -->
@@ -812,14 +734,6 @@
                 <p class="text-white">Kehadiran Anda akan membuat momen kami semakin istimewa</p>
             </div>
         </div>
-
-        <!-- Simple decoration elements
-        <div
-            class="absolute left-0 top-1/4 w-64 h-64 bg-rose-100 rounded-full mix-blend-multiply filter blur-3xl opacity-20 animate-blob">
-        </div>
-        <div
-            class="absolute right-0 bottom-1/4 w-64 h-64 bg-yellow-100 rounded-full mix-blend-multiply filter blur-3xl opacity-20 animate-blob animation-delay-2000">
-        </div> -->
         <img src="./asset/img/dekoratif/bawahbunga.PNG"
             class="absolute bottom-0 left-1/2 transform -translate-x-1/2 w-48 z-0 pointer-events-none overflow-hidden"
             data-aos="fade-up">
@@ -846,7 +760,7 @@
                     <div class="lg:w-1/2" data-aos="fade-right">
                         <div class="relative">
                             <div class="absolute inset-0 bg-black/10 rounded-xl"></div>
-                            <img src="./asset/img/portfolio/portfolio-1.jpg" alt="Pasangan Pengantin"
+                            <img src="./asset/img/portfolio/turut_undang_img.jpg" alt="Pasangan Pengantin"
                                 class="w-full h-auto rounded-xl shadow-lg"
                                 onerror="this.onerror=null; this.src='data:image/svg+xml;charset=UTF-8,%3Csvg%20width%3D%22800%22%20height%3D%22600%22%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%3E%3Crect%20x%3D%220%22%20y%3D%220%22%20width%3D%22800%22%20height%3D%22600%22%20fill%3D%22%23f8f9fa%22%2F%3E%3Ctext%20x%3D%22400%22%20y%3D%22300%22%20font-family%3D%22Arial%22%20font-size%3D%2224%22%20text-anchor%3D%22middle%22%20alignment-baseline%3D%22middle%22%20fill%3D%22%23adb5bd%22%3EFoto%20Pasangan%3C%2Ftext%3E%3C%2Fsvg%3E'">
                         </div>
