--- a/index.html
+++ b/index.html
@@ -616,7 +616,20 @@
                             <p class="text-gray-700 text-sm">Repok Muhajirin Pepao Timur Desa Lekor Kec. Janapria</p>
                             <p class="text-gray-700 mt-3 font-medium text-sm">Telp: 087757330710</p>
                         </div>
-
+                        <div class="flex justify-center py-4">
+                            <a href="https://maps.app.goo.gl/Z1KPJqAQVHDTqHBV8" target="_blank"
+                                rel="noopener noreferrer"
+                                class="bg-rose-500 hover:bg-rose-600 text-white font-medium py-2 px-6 rounded-full transition-all duration-300 flex items-center shadow-md animate-bounce">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 mr-2" fill="none"
+                                    viewBox="0 0 24 24" stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M17.657 16.657L13.414 20.9a1.998 1.998 0 01-2.827 0l-4.244-4.243a8 8 0 1111.314 0z" />
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M15 11a3 3 0 11-6 0 3 3 0 016 0z" />
+                                </svg>
+                                Dapatkan Lokasi
+                            </a>
+                        </div>
                         <!-- Small decorative element -->
                         <div class="flex justify-center mt-4">
                             <div class="w-2 h-2 bg-pink-300 rounded-full mx-1"></div>
