--- a/index.html
+++ b/index.html
@@ -741,7 +741,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
                             d="M8 7V3m8 4V3m-9 8h10M5 21h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v12a2 2 0 002 2z" />
                     </svg>
-                    <p class="font-medium text-center">Mohon konfirmasi kehadiran sebelum 20 April 2025</p>
+                    <p class="font-medium text-center">Mohon konfirmasi kehadiran sebelum 3 Mei 2025</p>
                 </div>
 
                 <p class="text-white">Kehadiran Anda akan membuat momen kami semakin istimewa</p>
